--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@sendgrid/mail": "^6.3.1",
     "@types/underscore": "^1.8.14",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
