--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path angularapp  --aot --prod"
+  },
+  "engines": {
+    "node": "v10.15.3",
+    "npm": "6.4.1"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
     "@angular/cdk": "~7.1.1",
+    "@angular/cli": "^7.3.8",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "^7.2.14",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -35,15 +42,15 @@
     "multer": "^1.4.1",
     "ng2-file-upload": "^1.3.0",
     "nodemailer": "^6.1.1",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
+    "typescript": "~3.1.1",
     "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.12",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -59,7 +66,6 @@
     "nodemon": "^1.18.11",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "tslint": "~5.11.0"
   }
 }
