--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@sendgrid/mail": "^6.3.1",
+    "@types/file-saver": "^2.0.0",
     "@types/underscore": "^1.8.14",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
     "multer": "^1.4.1",
