--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
+    "make-dir": "^3.0.0",
     "multer": "^1.4.1",
     "ng2-file-upload": "^1.3.0",
     "path": "^0.12.7",
