--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "my-dream-app2": {
+    "mfksoftware": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "my-dream-app2:build"
+            "browserTarget": "mfksoftware:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "my-dream-app2:build:production"
+              "browserTarget": "mfksoftware:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "my-dream-app2:build"
+            "browserTarget": "mfksoftware:build"
           }
         },
         "test": {
@@ -111,7 +111,7 @@
         }
       }
     },
-    "my-dream-app2-e2e": {
+    "mfksoftware-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -120,11 +120,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "my-dream-app2:serve"
+            "devServerTarget": "mfksoftware:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "my-dream-app2:serve:production"
+              "devServerTarget": "mfksoftware:serve:production"
             }
           }
         },
@@ -140,5 +140,5 @@
       }
     }
   },
-  "defaultProject": "my-dream-app2"
+  "defaultProject": "mfksoftware"
 }
