--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mfk-software",
+  "name": "mfksoftware",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --output-path angularapp --aot --prod"
+    "postinstall": "ng build --output-path mfksoftware --aot --prod"
   },
   "engines": {
     "node": "v10.15.3",
@@ -31,17 +31,14 @@
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@sendgrid/mail": "^6.3.1",
-    "@types/file-saver": "^2.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
-    "make-dir": "^3.0.0",
     "multer": "^1.4.1",
     "ng2-file-upload": "^1.3.0",
     "path": "^0.12.7",
